failure part added

--- a/index.html
+++ b/index.html
@@ -27,6 +27,29 @@
             </div>
         </div>
     </section>
+
+    <!-- Failures Part -->
+
+    <div>
+        <div>
+            <img class="person-img" src="images/person (2).png" alt="">
+        </div>
+        <div class="failure-details">
+            <h1>My failures of <br> previous year</h1>
+            <p class="failure-text">Contrary to popular belief, Lorem Ipsum is not <br> simply random text. It has roots
+                in a piece of <br>
+                classical Latin literature from 45 BC, making it over <br> 2000 years old. Richard McClintock.</p>
+
+            <div class="failure-list">
+                <p>1. Contrary to popular belief, is not simply.</p> <br>
+                <p>2. Contrary to popular belief.</p> <br>
+                <p>3. Contrary to popular , is not simply.</p> <br>
+                <p>4. Contrary to popular belief, is not simple.</p> <br>
+                <p>5. Contrary to popular simply.</p>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
