failure part edited

--- a/index.html
+++ b/index.html
@@ -15,22 +15,20 @@
 <body>
     <!-- Banner part -->
 
-    <section class="banner">
+    <div class="banner">
         <div>
             <h1 class="banner-text">All Thinks Are <br> Possible If You <br> believe</h1>
-            <div>
-                <p class="banner-details">There are many variations of passages of Lorem Ipsum <br> available, but the
-                    majority have suffered
-                    alteration
-                    in some <br> form, by injected humour, or randomised words</p>
-                <button class="btn-contact">Contact Us</button>
-            </div>
+            <p class="banner-details">There are many variations of passages of Lorem Ipsum <br> available, but the
+                majority have suffered
+                alteration
+                in some <br> form, by injected humour, or randomised words</p>
+            <button class="btn-contact">Contact Us</button>
         </div>
-    </section>
+    </div>
 
     <!-- Failures Part -->
 
-    <div>
+    <div class="failure">
         <div>
             <img class="person-img" src="images/person (2).png" alt="">
         </div>
@@ -49,6 +47,7 @@
             </div>
         </div>
     </div>
+
 
 </body>
 
