plans part edited

--- a/index.html
+++ b/index.html
@@ -48,6 +48,38 @@
         </div>
     </div>
 
+    <!-- Plans Part -->
+
+    <div>
+        <div class="plans-header">
+            <h1>My Plans</h1>
+        </div>
+
+        <ul class="skills">
+            <li>
+                <img class="image-one" src="images/icons/web.png" alt="">
+                <h3 class="skill">Web Development</h3>
+                <p class="wants">I want to start</p>
+            </li>
+            <li>
+                <img class="image-two" src="images/icons/js.png" alt="">
+                <h3 class="skill">JavaScript</h3>
+                <p class="wants">I want to learn</p>
+            </li>
+            <li>
+                <img class="image-third" src="images/icons/smoke.png" alt="">
+                <h3 class="skill">Smoking Habit</h3>
+                <p class="wants">I want to end</p>
+            </li>
+            <li>
+                <img class="image-fourth" src="images/icons/ecom.png" alt="">
+                <h3 class="skill">E commerce</h3>
+                <p class="wants">I want to develop</p>
+            </li>
+        </ul>
+
+
+    </div>
 
 </body>
 
