contact part added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <!-- Banner part -->
+    <!------------------------ Banner part ------------------------>
 
     <div class="banner">
         <div>
@@ -26,7 +26,7 @@
         </div>
     </div>
 
-    <!-- Failures Part -->
+    <!----------------------- Failures Part ----------------------->
 
     <div class="failure">
         <div>
@@ -48,7 +48,7 @@
         </div>
     </div>
 
-    <!-- Plans Part -->
+    <!---------------------- Plans Part -------------------->
 
     <div>
         <div class="plans-header">
@@ -77,9 +77,16 @@
                 <p class="wants">I want to develop</p>
             </li>
         </ul>
-
-
     </div>
+
+    <!--------------------- Contact Part --------------------->
+
+    <div class="contact">
+        <h1 class="contact-heading">Always keep a positive <br> mindset</h1>
+        <button class=contact-btn>Call Now</button>
+    </div>
+
+    <!--------------------- Blog Part --------------------->
 
 </body>
 
