blog part added

--- a/index.html
+++ b/index.html
@@ -88,6 +88,40 @@
 
     <!--------------------- Blog Part --------------------->
 
+    <div class="blog-header">
+        <h1><span class="key-word">Blog</span> & News From Us!</h1>
+    </div>
+    <p class="blog-text">Sint nascetur facere, delectus conubia consequuntur, nonummy distinctio! <br> Non officiis, id
+        natus non nisl
+        provident justo.</p>
+    <div class="blog-details">
+        <div>
+            <img src="images/blog-1.jpg" height="250px" width="300px" alt="">
+            <h4 class="blog-description">Maxime rhoncus aliquet sint <br> eu accusantium illum.</h4>
+            <p>Malesuada error laudantium quibusdam, <br> voluptas recusandae, corporis nec, metus <br>
+                numquam,
+                facilis,
+                nascetur?....
+            </p>
+        </div>
+        <div>
+            <img src="images/blog-2.jpg" height="250px" width="300px" alt="">
+            <h4 class="blog-description">Maxime rhoncus aliquet sint <br> eu accusantium illum.</h4>
+            <p>Malesuada error laudantium quibusdam, <br> voluptas recusandae, corporis nec, metus <br> numquam,
+                facilis,
+                nascetur?....
+            </p>
+        </div>
+        <div>
+            <img src="images/blog-3.jpg" height="250px" width="300px" alt="">
+            <h4 class="blog-description">Maxime rhoncus aliquet sint <br> eu accusantium illum.</h4>
+            <p>Malesuada error laudantium quibusdam, <br> voluptas recusandae, corporis nec, metus <br> numquam,
+                facilis,
+                nascetur?....
+            </p>
+        </div>
+    </div>
+
 </body>
 
 </html>
