footer and overall part added

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div class="failure">
         <div>
-            <img class="person-img" src="images/person (2).png" alt="">
+            <img src="images/person.png" alt="">
         </div>
         <div class="failure-details">
             <h1>My failures of <br> previous year</h1>
@@ -91,37 +91,55 @@
     <div class="blog-header">
         <h1><span class="key-word">Blog</span> & News From Us!</h1>
     </div>
-    <p class="blog-text">Sint nascetur facere, delectus conubia consequuntur, nonummy distinctio! <br> Non officiis, id
-        natus non nisl
-        provident justo.</p>
+    <p class="blog-text">Sint nascetur facere, delectus conubia consequuntur, nonummy distinctio!<br> Non officiis,id
+        natus non nisl provident justo.</p>
     <div class="blog-details">
         <div>
             <img src="images/blog-1.jpg" height="250px" width="300px" alt="">
             <h4 class="blog-description">Maxime rhoncus aliquet sint <br> eu accusantium illum.</h4>
             <p>Malesuada error laudantium quibusdam, <br> voluptas recusandae, corporis nec, metus <br>
-                numquam,
-                facilis,
-                nascetur?....
+                numquam,facilis,nascetur?....
             </p>
         </div>
         <div>
             <img src="images/blog-2.jpg" height="250px" width="300px" alt="">
             <h4 class="blog-description">Maxime rhoncus aliquet sint <br> eu accusantium illum.</h4>
-            <p>Malesuada error laudantium quibusdam, <br> voluptas recusandae, corporis nec, metus <br> numquam,
-                facilis,
-                nascetur?....
+            <p>Malesuada error laudantium quibusdam, <br> voluptas recusandae, corporis nec, metus <br>
+                numquam,facilis,nascetur?....
             </p>
         </div>
         <div>
             <img src="images/blog-3.jpg" height="250px" width="300px" alt="">
             <h4 class="blog-description">Maxime rhoncus aliquet sint <br> eu accusantium illum.</h4>
-            <p>Malesuada error laudantium quibusdam, <br> voluptas recusandae, corporis nec, metus <br> numquam,
-                facilis,
-                nascetur?....
+            <p>Malesuada error laudantium quibusdam, <br> voluptas recusandae, corporis nec, metus <br>
+                numquam,facilis,nascetur?....
             </p>
         </div>
     </div>
 
+    <!--------------------- Footer Part --------------------->
+    <footer class="footer-main">
+        <div>
+            <div class="footer-body">
+                <h1>Future</h1>
+                <br><br>
+                <p>
+                    There are many variations of passages of Lorem Ipsum <br> available, but the majority have suffered
+                    alteration in some <br> form, by injected humour, or randomised words</p>
+                <br>
+                <p>Email : info@gmail.com</p>
+                <br>
+                <p>Phone : 01500 00 00 00</p>
+            </div>
+            <br><br>
+            <div class="footer-icon">
+                <img src="images/icons/fb.png" alt="">
+                <img src="images/icons/twitter.png" alt="">
+                <img src="images/icons/youtube.png" alt="">
+            </div>
+            <button class="subscribe-btn">Subscribe</button>
+        </div>
+    </footer>
 </body>
 
 </html>
